@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-08-14T00:42:30Z",
-  "count_outdated" : 56,
-  "uniques_outdated" : 42,
-  "count" : 57,
-  "uniques" : 43,
+  "timestamp" : "2023-10-10T08:22:56Z",
+  "count_outdated" : 57,
+  "uniques_outdated" : 43,
+  "count" : 59,
+  "uniques" : 44,
   "clones" : [
     {
-      "timestamp": "2023-08-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "timestamp": "2023-10-10T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
